--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,12 @@
 	<groupId>nl.jcore</groupId>
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
 	<name>Testing REST Application</name>
 	<description>Demo project for Test a Spring Boot REST application</description>
+	<modules>
+		<module>untitled</module>
+	</modules>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
@@ -87,6 +91,13 @@
 			<artifactId>mysql</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
