added test class

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,19 +24,11 @@ jobs:
           java-version: '21'
 
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn -Dmaven.test.skip=true clean install
 
   test:
 
     runs-on: ubuntu-latest
-
-    needs: build
-
-    services:
-      testcontainers:
-        image: testcontainers/ryuk:0.5.1
-        ports:
-          - 8080:8080
 
     steps:
       - name: Checkout code
