--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,6 +30,8 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    needs: build
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
